# carv-os-scoring

./: .env.example  Dockerfile  README.md  pyproject.toml
scripts/: publish_test_message.py  seed_firestore.py  test_local.py
src/scoring/: config.py  main.py  models.py
src/scoring/api/: dependencies.py  routes.py  scores.py
src/scoring/observability/: metrics.py  setup.py
src/scoring/repositories/: firestore.py
src/scoring/services/: llm.py  prompt.py  publisher.py  scoring.py
terraform/: artifact_registry.tf  cloudrun.tf  firestore.tf  iam.tf  main.tf  monitoring.tf  outputs.tf  pubsub.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_llm.py  test_models.py  test_prompt.py  test_scores_api.py  test_scoring.py
